[UPDATE] added docu for user and dev and updated it(not complete), added OCR image upload in bank recon
